--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,5 @@ add_executable(${PROJECT_NAME_VAR}
     src/Triangle/Triangle.cpp
     src/Vector2/Vector2.cpp
     src/Vector3/Vector3.cpp
+    src/IdealDiffuseMaterial/IdealDiffuseMaterial.cpp
 )
